noinst_LIBRARIES = libyixun.a
libyixun_a_SOURCES = get_ip_mac.c get_ip_mac.h \
					 gre_module.c gre_module.h \
					 gre_tunnel.c gre_tunnel.h \
					 hexdump.c hexdump.h \
					 log_xxx.c log_xxx.h \
					 private_buff.c private_buff.h \
					 route_op.c route_op.h \
					 common_macro.h

INCLUDES = -I$(top_srcdir)/lib
