AM_CFLAGS = 

bin_PROGRAMS = yixun
yixun_SOURCES = main.c convert_code.c covert_code.h \
				encode_password.c encode_password.h \
				get_ip_mac.c get_ip_mac.h \
				log_xxx.c log_xxx.h \
				print_hex.c print_hex.h \
				radius.c radius.h \
				$(top_srcdir)/route/route_op.c \
				$(top_srcdir)/route/route_op.h
#yixun_LDADD = $(INTI_CFLAGS)

